--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 Spring.h2.console.enabled = true
 Spring.datasource.url = jdbc:h2:mem:test
+Spring.jpa.show-sql = true
+Spring.jpa.hibernate.ddl-auto = create-drop
