--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ Spring.h2.console.enabled = true
 Spring.datasource.url = jdbc:h2:mem:test
 Spring.jpa.show-sql = true
 Spring.jpa.hibernate.ddl-auto = update
+
+# Actuator
+management.endpoints.web.exposure.include=*
