--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ Spring.jpa.hibernate.ddl-auto = update
 
 # Actuator
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
