--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ Spring.jpa.hibernate.ddl-auto = update
 # Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+info.app.name=JobApplication
+info.app.description=RESTApi for job finding application
+info.app.version=1.0.0
+management.info.env.enable=true
