--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ management.endpoint.health.show-details=always
 info.app.name=JobApplication
 info.app.description=RESTApi for job finding application
 info.app.version=1.0.0
-management.info.env.enable=true
+management.info.env.enabled=true
