- add shutdown property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ info.app.name=JobApplication
 info.app.description=RESTApi for job finding application
 info.app.version=1.0.0
 management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true
