--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,24 @@
-Spring.h2.console.enabled = true
-Spring.datasource.url = jdbc:h2:mem:test
-Spring.jpa.show-sql = true
-Spring.jpa.hibernate.ddl-auto = update
+# H2 database configuration
+#Spring.h2.console.enabled = true
+#Spring.datasource.url = jdbc:h2:mem:test
+#Spring.jpa.show-sql = true ==> because of this setting hibernate print all the SQL statement on terminal
+#Spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto=create-drop ==> this tells hibernate or JPA that automatically create and drop the database schema based on the entity class
+# create-drop ==> means schema will be created when season is created and dropped when season ended
+
+# PostgreSQL  Database configuration setting so work with PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432//jobapp
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# jdbc:postgresql: means using PostgreSQL database
+# localhost:5432: running on localhost at 5432 port which default for PostgreSQL
+# jobapp: Database name
+
 
 # Actuator
 management.endpoints.web.exposure.include=*
