fix the properties mistake

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 # create-drop ==> means schema will be created when season is created and dropped when season ended
 
 # PostgreSQL  Database configuration setting so work with PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432//jobapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.database=POSTGRESQL
