- change superuser name root to postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 
 # PostgreSQL  Database configuration setting so work with PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=root1234
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
